--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -24,4 +24,5 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+    padding-bottom: env(safe-area-inset-bottom);
 }
