--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -21,3 +21,13 @@ body {
       20px
     ) env(safe-area-inset-left, 20px);
 }
+
+ul {
+  list-style-type: disc;
+  padding-left: 1.5em;
+}
+
+ol {
+  list-style-type: decimal;
+  padding-left: 1.5em;
+}
