--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -22,16 +22,29 @@ body {
     ) env(safe-area-inset-left, 20px);
 }
 
-.search ul {
+.markdown ul {
   list-style-type: disc;
   padding-left: 1.5em;
 }
 
-.search ol {
+.markdown ol {
   list-style-type: decimal;
   padding-left: 1.5em;
 }
 
+.markdown li {
+  margin-bottom: 1rem;
+}
+
+.markdown h1,
+.markdown h2,
+.markdown h3 {
+  font-weight: 500;
+  text-decoration: underline;
+  text-decoration-color: rgb(255, 140, 0);
+  text-underline-offset: 0.2em;
+  margin-bottom: 1rem;
+}
 .recharts-tooltip-wrapper {
   z-index: 1000;
 }
