--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -32,8 +32,13 @@ body {
   padding-left: 1.5em;
 }
 
-.markdown li {
+.markdown li,
+.markdown p {
   margin-bottom: 1rem;
+}
+
+.markdown li > p:first-child {
+  margin-bottom: 0;
 }
 
 .markdown h1,
