--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -63,3 +63,14 @@ body {
 * {
   --tw-ring-color: none !important;
 }
+
+/* For Webkit-based browsers (Chrome, Safari and Opera) */
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+
+/* For IE, Edge and Firefox */
+.scrollbar-hide {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
